--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+node_modules/
+client/dist/
+client/build/
+.env
+.DS_Store
+
 # Logs
 logs
 *.log
@@ -27,3 +33,4 @@ server/.env
 client/.env
 server/package-lock.json
 client/package-lock.json
+package-lock.json
