--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "engines": { "node": ">=18" },
   "scripts": {
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm --prefix client install && npm --prefix client run build && npm install --prefix server",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "start": "node server/src/server.js",
     "dev": "concurrently \"npm run dev --prefix client\" \"npm start --prefix server\""
   },
