updating package...again

--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "sleeper-monorepo",
   "private": true,
   "version": "1.0.0",
-  "engines": { "node": ">=18" },
+  "engines": {
+    "node": "20.x",
+    "npm": "10.x"
+  },
   "scripts": {
-    "heroku-postbuild": "cd client && npm install && npm run build",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "start": "node server/src/server.js",
     "dev": "concurrently \"npm run dev --prefix client\" \"npm start --prefix server\""
   },
-    "dependencies": {
-        "concurrently": "^9.2.1"
-    }
+  "dependencies": {
+    "concurrently": "^9.2.1"
+  }
 }
