--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "dev": "concurrently \"npm run dev --prefix client\" \"npm start --prefix server\""
   },
   "dependencies": {
-    "concurrently": "^9.2.1"
+    "concurrently": "^9.2.1",
+    "express": "^4.19.2",
+    "mongoose": "^8.0.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "axios": "^1.6.7",
+    "openai": "^4.0.0"
   }
 }
